zwave/Enbrighten-GE/ZW4103/28169 - Plug-in 1-Outlet Smart Switch/5.23/README.md
# DISCLAIMER:
The software is provided "as is" to provide our customers the ability to update our products. Jasco does not offer any express or implied warranty of any kind when using these files, including, but not limited to, warranties of merchantability, noninfringement, or fitness for a particular purpose.<br>
<br>
Jasco does not imply or guarantee that the software provided will meet your requirements or that the operation thereof will be uninterrupted or error-free, or that all errors will be corrected. Jasco does not assume any responsibility for product errors related to the use of the software contained within this repository. Jasco does not offer support on flashing firmware to the devices listed here and are only provided as a courtesy to our customers and the community.

## CONTENTS:
ZW4103_Enbrighten-GE_28169_5.23.hex

## RELEASE NOTES:
v5.23: THIRD RELEASE FOR MODEL 28169

## DATE CODES INSTALLED ON:
1749 THROUGH 1828

## CHANGELOG:
1. Fixed AGI issue<br>
2. Updated Devkit from 6.51.06 to 6.51.10