zwave/Enbrighten-GE/ZW4103/28169 - Plug-in 1-Outlet Smart Switch/5.25/README.md
# DISCLAIMER:
The software is provided "as is" to provide our customers the ability to update our products. Jasco does not offer any express or implied warranty of any kind when using these files, including, but not limited to, warranties of merchantability, noninfringement, or fitness for a particular purpose.<br>
<br>
Jasco does not imply or guarantee that the software provided will meet your requirements or that the operation thereof will be uninterrupted or error-free, or that all errors will be corrected. Jasco does not assume any responsibility for product errors related to the use of the software contained within this repository. Jasco does not offer support on flashing firmware to the devices listed here and are only provided as a courtesy to our customers and the community.

## CONTENTS:
ZW4103_Enbrighten-GE_28169_5.25.hex

## RELEASE NOTES:
v5.25: FOURTH RELEASE FOR MODEL 28169

## DATE CODES INSTALLED ON:
1829 THROUGH PRESENT

## CHANGELOG:
1. Added parameter 19 for alternate exclusion